crates/kul-core/tests/corpus/valid/02-version-decl.kul
kul 0.1

person alice name:"Alice Sharma" gender:female
person bob   name:"Bob Sharma"   gender:male
